--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -109,6 +109,12 @@ shareSendEmailObjectSubject=<Email subject including object identifier PLEASE RE
 #YMSG: Send E-Mail message
 shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0} (id: {1})\r\n{2}
 
+#~~~ New Order View ~~~~~~~~~~~~~~~~~~~~~~~~~~
+#XBUT: 'Save' is a verb
+xbut.save=Save
+
+#XBUT: 'Cancel' is a verb
+xbut.cancel=Cancel
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Not found view title
