Push to Remote Repository

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -65,6 +65,9 @@ xbut.approve=Approve
 #XBUT: 'Reject' is a verb
 xbut.reject=Reject
 
+#XBUT: 'Copy and Create' is a verb
+xbut.copyandcreatenew=Copy and Create
+
 #~~~ Detail View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Detail view title
